name:                located
version:             0.1.0.0
synopsis:            Source location helpers
homepage:            https://github.com/elliottt/located
license:             BSD3
license-file:        LICENSE
author:              Trevor Elliott
maintainer:          awesomelyawesome@gmail.com
copyright:           2016
category:            Language
build-type:          Simple
cabal-version:       >=1.10
tested-with:         GHC == 7.10.2

source-repository head
  type:              git
  location:          git://github.com/elliottt/located.git

extra-source-files:  CHANGELOG.md

library
  exposed-modules:     Text.Location
                       Text.Location.Layout
  ghc-options:         -Wall
  other-extensions:    DeriveGeneric,
                       DeriveFunctor,
                       DeriveFoldable,
                       DeriveTraversable,
                       RecordWildCards
  build-depends:       base >=4.8 && <5,
                       text
  hs-source-dirs:      src
  default-language:    Haskell2010
